# CA-MCW

./: .gitignore  LICENSE  README.md
src/vf_robot_controller/: CMakeLists.txt  README.md  package.xml
src/vf_robot_controller/config/controller/: _ARCHIVED_vf_imitation.yaml  _ARCHIVED_vf_inference_eval.yaml  critics.yaml  vf_collectwt.yaml  vf_controller_fixed.yaml  vf_controller_fixed_emphasis.yaml  vf_controller_inference.yaml  vf_controller_topic.yaml  vf_fixedwt_no_corridor.yaml  vf_fixedwt_no_customs.yaml  vf_fixedwt_no_dyn_obstacle.yaml  vf_fixedwt_no_volumetric.yaml
src/vf_robot_controller/config/perception/: backend_selection.yaml  channels_v1.yaml  channels_v2.yaml  channels_v3.yaml  perception.yaml
src/vf_robot_controller/config/training/: training_baseline.yaml  training_channelwise.yaml  training_oracle.yaml
src/vf_robot_controller/include/vf_robot_controller/controller/: vf_controller.hpp  vf_critic_manager.hpp  weight_cache.hpp
src/vf_robot_controller/include/vf_robot_controller/critics/: corridor_critic.hpp  dynamic_obstacle_critic.hpp  volumetric_critic.hpp  weighted_critic_wrapper.hpp
src/vf_robot_controller/include/vf_robot_controller/logging/: episode_logger.hpp  synchronizer.hpp
src/vf_robot_controller/include/vf_robot_controller/meta_critic/: fixed_weight_provider.hpp  i_weight_provider.hpp  imitation_velocity_provider.hpp  onnx_weight_provider.hpp  topic_weight_provider.hpp
src/vf_robot_controller/launch/core/: imitation_inference_launch.py  metacritic_inference_launch.py  perception_launch.py
src/vf_robot_controller/launch/vf_data_training/manual/: vf_data_training_manual_fixedwt.launch.py
src/vf_robot_controller/models/: README.md
src/vf_robot_controller/models/imitation_wt/v1_hardreg/: imitation.onnx  imitation.pt  metadata.json  training_log.csv
src/vf_robot_controller/models/imitation_wt/v1_normal/: imitation.onnx  imitation.pt  metadata.json  training_log.csv
src/vf_robot_controller/models/imitation_wt/v1_tuned/: feature_norm.json  imitation.onnx  imitation.pt  metadata.json  training_log.csv
src/vf_robot_controller/models/imitation_wt/v2_hardreg/: imitation.onnx  imitation.pt  metadata.json  training_log.csv
src/vf_robot_controller/models/imitation_wt/v2_normal/: imitation.onnx  imitation.pt  metadata.json  training_log.csv
src/vf_robot_controller/models/imitation_wt/v2_tuned/: feature_norm.json  imitation.onnx  imitation.pt  metadata.json  training_log.csv
src/vf_robot_controller/models/imitation_wt/v3_hardreg/: imitation.onnx  imitation.pt  metadata.json  training_log.csv
src/vf_robot_controller/models/imitation_wt/v3_normal/: feature_norm.json  imitation.onnx  imitation.pt  metadata.json  training_log.csv
src/vf_robot_controller/nodes/: context_node.cpp  data_collector_node.cpp  feature_extractor_node.cpp  gcf_node.cpp  map_backend_node.cpp
src/vf_robot_controller/notebooks/: 01_dataset_inspection.ipynb  02_feature_distribution.ipynb  03_critic_weight_heatmap.ipynb  04_failure_analysis.ipynb
src/vf_robot_controller/plugins/: controller_plugins.xml  critic_plugins.xml
src/vf_robot_controller/scripts/: compute_normalization.py  export_model.py  phase9_acceptance.py  plot_weight_vs_clearance.py  run_oracle.py  train.py  vf_session_status
src/vf_robot_controller/src/controller/: vf_controller.cpp  vf_critic_manager.cpp
src/vf_robot_controller/src/critics/: corridor_critic.cpp  dynamic_obstacle_critic.cpp  volumetric_critic.cpp  weighted_critic_wrapper.cpp
src/vf_robot_controller/src/logging/: episode_logger.cpp  synchronizer.cpp
src/vf_robot_controller/src/meta_critic/: fixed_weight_provider.cpp  imitation_velocity_provider.cpp  onnx_weight_provider.cpp  topic_weight_provider.cpp
src/vf_robot_controller/src/perception/gcf/: gcf_2d.cpp  (+4 more)
src/vf_robot_controller/test/: CMakeLists.txt
src/vf_robot_controller/test/fixtures/: README.md  sample_rtabmap.db
src/vf_robot_controller/test/integration/: test_controller_loads.cpp  test_feature_extractor_pipeline.cpp  test_gcf_node.cpp  test_passthrough_matches_mppi.cpp
src/vf_robot_controller/vf_controller/: __init__.py  model_defaults.py
src/vf_robot_controller/vf_controller/data_collection/: __init__.py  data_collector_node.py  episode_writer.py  goal_debouncer.py  session.py  session_status.py
src/vf_robot_controller/vf_controller/inference/: __init__.py  imitation_inference_node.py  metacritic_inference_node.py
src/vf_robot_controller/vf_controller/training/: __init__.py  train_imitation.py  train_inference.py  train_raw_critics.py
src/vf_robot_messages/: CMakeLists.txt  README.md  package.xml  setup.py
src/vf_robot_messages/msg/: ArcMovement.msg  Command.msg  CorridorPiece.msg  Cubic.msg  HallwayRecord.msg  MoveParameters.msg  MoveStamped.msg  MoveStampedArray.msg  MppiCriticsStats.msg  MppiTrajectory.msg  MppiTrajectoryPoint.msg  PathPoints.msg  PlanarCubicSpline.msg  PossibleManeuvers.msg  RGBLED.msg  ReportPoint.msg  StatusReport.msg  Trajectory.msg  UltraSound.msg  WallPoints.msg
src/vf_robot_messages/srv/: CalibrateCamera.srv  MoveParametersStringType.srv  PointCloudType.srv  ServiceStringArrayRequest.srv  StartCalibrationIntrinsics.srv  StringMoveParametersType.srv  StringPointCloudType.srv
src/vf_robot_utils/: README.md  package.xml  setup.cfg  setup.py
src/vf_robot_utils/launch/goalposes_collect/: evaluation_goalposes_collect.launch.py  training_goalposes_collect.launch.py
src/vf_robot_utils/runs/: README.md  collect_corridor.csv  eval_corridor.csv  smoke_test.csv
src/vf_robot_utils/test/: test_stats.py  test_vf_data_paths.py
src/vf_robot_utils/tools/: run_comparison.sh  run_comparison_all.sh  sweep_eval.sh  sync_to_thesis.sh
src/vf_robot_utils/vf_robot_utils/: constants.py  launch_builders.py
src/vf_robot_utils/vf_robot_utils/analysis/: statistical_tests.py  style.py
src/vf_robot_utils/vf_robot_utils/io/: __init__.py  csv_schema.py  hash_utils.py  results_writer.py  vf_data_paths.py
src/vf_robot_utils/vf_robot_utils/mapgen/: map_loader.py
src/vf_robot_utils/vf_robot_utils/tools/: pose_recorder.py  tour_runner.py
(+329 files in other folders)
