<?xml version="1.0"?>
<package format="3">
  <name>vf_robot_messages</name>
  <version>0.0.1</version>
  <description>ROS 2 message and service definitions for UVC Robot</description>

  <maintainer email="pravin.oli.08@gmail.com">root</maintainer>
  <license>TODO</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Interface generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Message dependencies -->
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
